--- a/.prettierrc
+++ b/.prettierrc
@@ -3,7 +3,5 @@
   "semi": true,
   "useTabs": false,
   "tabWidth": 2,
-  "trailingComma": "all",
-  "printWidth": 120,
-  "arrowParens": "always"
+  "trailingComma": "all"
 }
